
SET(SETUP_TARGET_NAME example_convert)
include_directories(${PROJECT_SOURCE_DIR}/include/)

#INCLUDE_DIRECTORIES(AFTER  ${JSONCPP_INCLUDE_DIR})
# INCLUDE_DIRECTORIES(AFTER  ${JSONCPP_INCLUDE_DIR})
#INCLUDE_DIRECTORIES( ${OPENAL_INCLUDE_DIR} )

SET(SETUP_SOURCES
    example_convert.cpp
)

#INCLUDE_DIRECTORIES(${FFMPEG_INCLUDE_DIR})
#ADD_DEFINITIONS(-D_WIN32_WINNT=0x0501)
#ADD_DEFINITIONS(-DZLIB_DLL)

IF(BUILD_STATIC_LIBRAY)
ELSE(BUILD_STATIC_LIBRAY)
    ADD_DEFINITIONS(-DOPENNURBS_IMPORTS)
ENDIF(BUILD_STATIC_LIBRAY)

ADD_EXECUTABLE(${SETUP_TARGET_NAME} ${SETUP_HEADERS} ${SETUP_SOURCES})
#SET_TARGET_PROPERTIES(${SETUP_TARGET_NAME} PROPERTIES  LINK_FLAGS "/OPT:REF")
SET_TARGET_PROPERTIES(${SETUP_TARGET_NAME} PROPERTIES PROJECT_LABEL "${SETUP_TARGET_NAME}")
SET_TARGET_PROPERTIES(${SETUP_TARGET_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${SETUP_TARGET_NAME} PROPERTIES OUTPUT_NAME ${SETUP_TARGET_NAME})
TARGET_LINK_LIBRARIES(${SETUP_TARGET_NAME}
	${OPENGL_LIBRARIES}
	
	# shlwapi.lib
    debug ${ZLIB_LIBRARY_DEBUG} optimized ${ZLIB_LIBRARY_RELEASE}
    OpenNURBS
	)
		
SET(INSTALL_INCDIR include)
SET(INSTALL_BINDIR bin)
SET(INSTALL_LIBDIR bin)
SET(INSTALL_ARCHIVEDIR lib)

INSTALL(
    TARGETS ${SETUP_TARGET_NAME}
    RUNTIME DESTINATION ${INSTALL_BINDIR}
    LIBRARY DESTINATION ${INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${INSTALL_ARCHIVEDIR}
)


